--- a/src/Home.css
+++ b/src/Home.css
@@ -12,3 +12,23 @@
   top: 0;
   left: 0;
 }
+.text-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+}
+
+.display-4 {
+  font-size: 3rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+}
+
+.lead {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
