--- a/src/Home.css
+++ b/src/Home.css
@@ -12,6 +12,8 @@
   top: 0;
   left: 0;
 }
+/* text styling*/
+
 .text-container {
   position: absolute;
   top: 50%;
@@ -31,4 +33,22 @@
   font-size: 1.5rem;
   font-weight: 300;
 }
+
+/* triple images styling*/
+.my-image,
+.my-image3,
+.my-image5 {
+  flex-basis: 33%;
+  flex-grow: 1;
+  max-width: 430px;
+}
+
+.my-image3 {
+  max-width: 550px;
+}
+.jumbotron {
+ 
+  padding: 2rem;
+}
+
 
