--- a/src/About.css
+++ b/src/About.css
@@ -23,13 +23,13 @@
  @media (max-width: 576px) {
     .abt7 {
     position: relative;
-    top: 450px;
+    top: 440px;
     }
 } 
 @media (max-width: 576px) {
     .abt8 {
     position: relative;
-    top: 850px;
+    top: 870px;
     }
 } 
 
@@ -37,12 +37,12 @@
 /* media queries for images  */
 @media (max-width: 576px) {
     .my-image2{
-    margin-top: 130px;
+    margin-top: 120px;
     }
 } 
 @media (max-width: 576px) {
     .my-image4{
-    margin-top: 220px;
+    margin-top: 250px;
     }
 } 
 @media (max-width: 576px) {
@@ -56,7 +56,31 @@
  @media (max-width: 576px) {
     .form1 {
         position: relative;
-        top: -980px;
+        top: -995px;
         padding-left: 35px;
     }
 } 
+
+@media (max-width: 576px) {
+    .form2 {
+        position: relative;
+        top: -610px;
+        padding-left: 35px;
+    }
+} 
+
+@media (max-width: 576px) {
+    .form3 {
+        position: relative;
+        top: -230px;
+        padding-left: 35px;
+        margin-bottom: -130px;
+    }
+}
+
+/* @media (max-width: 576px) {
+    .sub3 {
+        
+        padding-bottom: -130px;
+    }
+} */
