added media query e style update

--- a/src/footer.css
+++ b/src/footer.css
@@ -1,3 +1,5 @@
+
+
 .footer {
     margin: 10px auto;
     height: auto;
@@ -9,10 +11,19 @@
     text-size-adjust: auto;
 }
 
+.col-1 {
+    flex-basis: 40%;
+}
+
+.col-2 {
+    flex-basis: 60%;
+}
+
 .footer .social_media-icons a {
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 25px;
+    margin-top: 15px;
     margin-left: 60px;
     margin-right: 0;
     border-radius: 100%;
@@ -20,22 +31,19 @@
     }
 
 .copyright-text {
+    margin-top:  24px;
     color: wheat;
     margin-top: 60px;
     margin-left: 20px;
     text-align: left;
+    line-height: 1.5; 
 }
 
-/* make footer and maps-iframe responsive by using media queries */ 
-@media (max-width: 991px) {
-    .footer [class^=col-] {
-        text-align: left;
-        margin-bottom: 30px;
-        height: auto;
-    }
-}
 
-@media (max-width: 767px) {
+/* make footer and maps-iframe responsive by using media queries */
+
+/*This media query targets devices with a maximum width of 575 pixels, such as smartphones in portrait orientation.*/
+@media(max-width: 575px) {
     .footer {
         padding-bottom: 0;
         height: auto;
@@ -45,8 +53,55 @@
     .footer .social_media-icons {
         text-align: center;
     }
+    .C-1,
+    .C-2 {
+        flex-basis:50%;
+    }
 
+    .footer .social_media-icons{
+        margin-top: 20px;
+    }
+
+    .footer .social_media-icons a {
+        font-size: 14px;
+    }
+    .icon {
+        width: 30px;
+        height: 30px;
+    }
 }
+
+/* This media query targts devices with a minimum width of 992 pixels and maximum width of 1199 pixels, such as tablets in landscape orientation. */
+@media (min-width: 992px) and (max-width: 1199px){
+    .footer {
+        padding-bottom: 0;
+        height: auto;
+    }
+
+    .footer .copyright-text,
+    .footer .social_media-icons {
+        text-align: center;
+    }
+    .C-1,
+    .C-2 {
+        flex-basis: 100%;
+        
+    }
+
+    .footer .social_media-icons {
+        margin-top: 30px;
+    }
+
+    .footer .social_media-icons li {
+        margin-right: 20px;
+    }
+
+    .icon {
+        width: 50px;
+        height: 50px;
+    }
+}
+
 .icon {
     width: 40px;
     height: 40px;
@@ -55,10 +110,7 @@
   
 }
 .social_media-icons {
-    margin-top: 25px;
     padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
 }
 
 .social_media-icons li {
@@ -67,13 +119,10 @@
 }
 
 .social_media-icons a {
-    
     color: #a5a7a7;
     font-size: 16px;
     display: inline-block;
-    line-height: 44px;
     text-align: center;
-    margin-right: 2px;
     border-radius: 100px;
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
@@ -91,7 +140,7 @@
 }
 
 .social_media-icons.size-sm a {
-    line-height: 34px;
+    line-height: 60px;
     height: 34px;
     width: 34px;
     font-size: 14px;
